--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -3,85 +3,48 @@
     <h3>Agregar Testimonio</h3>
   </div>
   <div class="set-3 txt-right">
-    <button
-      type="button"
-      mat-icon-button
-      color="primary"
-      (click)="killDialog()"
-    >
+    <button type="button" mat-icon-button color="primary" (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
 </div>
 
 <div class="set-12 dialog-body">
-  <form
-    [formGroup]="addTestimonyFormGroup"
-    (submit)="createTestimony(addTestimonyFormGroup)"
-  >
+  <form [formGroup]="addTestimonyFormGroup" (submit)="createTestimony(addTestimonyFormGroup)">
     <div class="form-body">
       <div *ngIf="isAnonymous" class="visibility-container">
-        <img
-          class="visibility"
-          src="../../../assets/images/VISIBILITY ICON.svg"
-          alt="imagen de usuario visible"
-          (click)="visibility()"
-        />
+        <img class="visibility" src="../../../assets/images/VISIBILITY ICON.svg" alt="imagen de usuario visible"
+          (click)="visibility()" />
         <small (click)="visibility()">Usuario Visible</small>
       </div>
       <div *ngIf="!isAnonymous" class="visibility-container">
-        <img
-          class="visibility"
-          src="../../../assets/images/VISIBILITY OFF ICON.svg"
-          alt="imagen de usuario visible"
-          (click)="visibility()"
-        />
+        <img class="visibility" src="../../../assets/images/VISIBILITY OFF ICON.svg" alt="imagen de usuario visible"
+          (click)="visibility()" />
         <small (click)="visibility()">Usuario Anónimo</small>
       </div>
 
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Escribe una descripción o carga un documento</mat-label>
-        <textarea
-          matInput
-          placeholder="Descripción"
-          formControlName="description"
-        ></textarea>
+        <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
       </mat-form-field>
 
       <div class="imagebox">
         <label [ngClass]="imageUrl ? 'data' : 'empty'">
           <mat-icon>photo_camera</mat-icon>
           <span>Subir imagen</span>
-          <input
-            type="file"
-            accept="image/*"
-            (change)="handleSelectImage($event)"
-            formControlName="image"
-          />
+          <input type="file" accept="image/*" (change)="handleSelectImage($event)" formControlName="image" />
         </label>
 
-        <img
-          class="preview"
-          [src]="imageUrl"
-          alt="img_upload"
-          [ngClass]="imageUrl ? 'data' : 'empty'"
-        />
+        <img class="preview" [src]="imageUrl" alt="img_upload" [ngClass]="imageUrl ? 'data' : 'empty'" />
       </div>
     </div>
     <div class="messageError">
-      <span *ngIf="messageError" class="messageError"
-        >Titulo y descripción son requeridos.</span
-      >
+      <span *ngIf="messageError" class="messageError">Titulo y descripción son requeridos.</span>
     </div>
 
     <div class="set-12 ctrls">
-      <button
-        type="submit"
-        mat-raised-button
-        [disabled]="addTestimonyFormGroup.invalid"
-        color="primary"
-        class="submit-button"
-      >
+      <button type="submit" mat-raised-button [disabled]="addTestimonyFormGroup.invalid" color="primary"
+        class="submit-button">
         Agregar testimonio
       </button>
     </div>
