--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -37,7 +37,7 @@
         <div class="set-12 imghldr">
           <mat-icon class="pano" *ngIf="solution.images.length == 0">panorama</mat-icon>
           <slider-images [images]="solution.images" *ngIf="solution.images.length != 0"></slider-images>
-          <div class="overlay">
+          <div class="overlay" (click)="popImageViewer()">
             <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
           </div>
