fix description box

--- a/src/app/components/complete-registration/complete-registration.component.html
+++ b/src/app/components/complete-registration/complete-registration.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 dialog-head">
   <h1>¡Hola!</h1>
-  <h3>¡Bienvenido a PANDO!</h3>
+  <h3>¡Bienvenido a Mexicolectivo!</h3>
   <p>
     <small>Antes de continuar necesitamos que compartas algunos datos e intereses para mejorar tu experiencia en
       <strong>Mexicolectivo</strong></small>
