--- a/src/app/components/description-viewer/description-viewer.component.html
+++ b/src/app/components/description-viewer/description-viewer.component.html
@@ -1,11 +1,11 @@
-<div class="set-12 loading" *ngIf="!isDataAvailable">
-  <mat-spinner></mat-spinner>
-</div>
-
-<div class="set-12" *ngIf="isDataAvailable">
-  <div class="set-12 dialog-head"></div>
-
-  <div class="set-12 dialog-body">
-    {{document.description}}
+<div class="container">
+  <div class="header">
+    <h2 class="title">{{ title.toUpperCase() }}</h2>
+    <button class="button" type="button" mat-icon-button (click)="killDialog()">
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </div>
+  <div class="body">
+    <p class="text">{{ text }}</p>
   </div>
 </div>
