--- a/src/app/components/description-viewer/description-viewer.component.scss
+++ b/src/app/components/description-viewer/description-viewer.component.scss
@@ -1,10 +1,43 @@
 :host {
-  .loading {
-    mat-spinner {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+  .container {
+    width: 600px;
+    height: 450px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+
+    .title {
+      word-break: break-all;
+      max-width: 400px;
+      position: relative;
+      text-align: center;
+    }
+
+    .button {
+      color: #71f5ad;
+      position: relative;
+      top: 19px;
+      right: 26px;
+    }
+  }
+
+  .body {
+    width: 100%;
+    height: 330px;
+    line-height: 25px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+
+    .text {
+      padding: 60px;
     }
   }
 }
