--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -186,18 +186,17 @@
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef=" let element">
                 <button type="button" class="catbtn" [disabled]="!element.access"
-                  (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element.id)"
-                  *ngIf="user.activityName != 'administrator'">
+                  (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element.id)">
                   <mat-icon>question_answer</mat-icon>
                   <small>{{element.name}}</small>
                 </button>
 
-                <button type="button" class="catbtn" [disabled]="!element.access"
+                <!-- <button type="button" class="catbtn" [disabled]="!element.access"
                   (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)"
                   *ngIf="user.activityName == 'administrator'">
                   <mat-icon>question_answer</mat-icon>
                   <small>{{element.category.name}}</small>
-                </button>
+                </button> -->
               </td>
             </ng-container>
 
