--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -48,18 +48,16 @@
   </div>
 
   <div class="set-8 col-rgt">
-    <div class="set-12" *ngIf="haveRootPermissions">
-      <div class="set-12" *ngIf="userActivities.includes('administrator')">
-        <div class="admin-template" [user]="user" [documents]="documents"></div>
-      </div>
+    <div class="set-12" *ngIf="userActivities.includes('administrator')">
+      <div class="admin-template" [user]="user" [documents]="documents"></div>
     </div>
 
-    <div class="set-12" *ngIf="!haveRootPermissions">
+    <div class="set-12" *ngIf="userActivities.includes('editor')">
       <div class="editor-template" [user]="user" [documents]="documents"></div>
     </div>
 
     <div class="set-12" *ngIf="userActivities.includes('citizen')">
-      <div class="editor-template" [user]="user" [documents]="documents"></div>
+      <div class="c-type-template" [user]="user" [documents]="documents"></div>
     </div>
   </div>
 </div>
