link solutions - others

--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -3,9 +3,9 @@
     <div class="set-4">
       <img src="../../../assets/images/mexicolectivo-full-green.png" (click)="linkMe('home')" />
     </div>
-    <!-- <div class="set-9">
+    <div class="set-9">
       <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" disabled />
-    </div> -->
+    </div>
   </div>
 
   <div class="set-6 navigation">
