--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -39,6 +39,11 @@
     }
   }
 
+  .bar-search {
+    background: #ffffff;
+    margin-left: 30px !important;
+  }
+
   .bar-search:disabled {
     opacity: 0.6;
     cursor: not-allowed;
