--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
@@ -3,70 +3,29 @@
     height: 450px;
     display: flex;
     flex-flow: column wrap;
-    background: linear-gradient(360deg, rgba(0, 3, 79, 0) -40%, #00031d 100%);
-    // background-image: radial-gradient(#71f5ac27 5%, transparent 5%);
-    // background-position: 0 0, 20px 20px;
-    // background-size: 30px 30px;
-    // background-color: #00031d;
+    background-color: #00031d;
     border-radius: 5px 5px 0px 0px;
     padding: 25px;
+
     .random-text {
       margin-bottom: 32px;
       position: relative;
+
       span {
         border: 3px solid #71f5ad;
-
         background-color: transparent;
         padding: 6px 20px;
         border-radius: 6px;
-        // border : 4px solid #ff6d00;
         text-transform: uppercase;
         font-weight: 800;
         color: #71f5ad;
-        // margin-top: 20px;
         font-size: 16px;
         z-index: 1001;
         position: relative;
       }
 
-      // .box {
-      //   border: 4px solid #71f5ad;
-      //   background-color: transparent;
-      //   padding: 6px 20px;
-      //   text-transform: uppercase;
-      //   font-weight: 600;
-      //   color: #71f5ad;
-      //   border-radius: 6px;
-      //   font-size: 16px;
-
-      //   margin: 10px auto;
-      //   padding: 10px;
-      //   text-align: center;
-      //   font-weight: 900;
-      //   color: #fff;
-      //   font-family: arial;
-      //   position: relative;
-      // }
-      // .sb4:before {
-      //   content: "";
-      //   border: 4px solid #71f5ad;
-      //   width: 0px;
-      //   height: 0px;
-      //   border-left: 10px solid transparent;
-      //   border-right: 10px solid #71f5ad;
-      //   border-top: 10px solid #71f5ad;
-      //   border-bottom: 10px solid transparent;
-      //   right: 19px;
-      //   bottom: -19px;
-      // }
-
       .sb4 {
-        // width: 20px;
-        // height: 20px;
         position: absolute;
-        // background-color: red;
-        // content: "";
-        // border: 4px solid #71f5ad;
         width: 0px;
         height: 0px;
         border-left: 10px solid transparent;
