--- a/src/app/public-documents/components/top10-list/top10-list.component.html
+++ b/src/app/public-documents/components/top10-list/top10-list.component.html
@@ -1,9 +1,11 @@
 <mat-list class="container shadow">
   <p class="title">Top 10 Soluciones</p>
   <mat-list-item *ngFor="let item of data">
-    <span mat-line style="font-size: 5px">
+    <span mat-line>
       <div mat-line>
-        <p class="name">{{ item.title }}</p>
+        <button type="button" class="name" (click)="linkMe(item.url)">
+          {{ item.title }}
+        </button>
       </div>
     </span>
     <div mat-line class="progress-bar" [matTooltip]="item.stats.score+' %'" matTooltipClass="tooltip"
