--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -50,106 +50,127 @@
           </expanded-text>
         </div>
       </mat-card>
+
       <horizontal-stats [users]="stats?.users" [interactions]="stats?.interactions"></horizontal-stats>
     </div>
+
     <div class="set-9 col-rgt">
-      <panel-subcategory [data]="panelTopicsData" [selectedID]="subcategory._id"></panel-subcategory>
-      <div class="set-12 container-titles">
-        <div class="set-3 title">
-          <p>
-            Soluciones
-            <img src="../../../assets/images/row.png" alt="" width="22" />
-          </p>
-        </div>
-        <div class="set-3">
-          <div class="set-4 table-head">
-            <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
-              [disabled]="solutionsDataSource.length == 0" [class.searchDisabled]="solutionsDataSource.length === 0" />
+      <mat-card>
+        <panel-subcategory [data]="panelTopicsData" [selectedID]="subcategory._id"></panel-subcategory>
+
+        <div class="set-12 container-titles">
+          <div class="set-12">
+            <div class="mt-2 set-3">
+              <mat-form-field appearance="outline">
+                <mat-label>Cobertura</mat-label>
+                <mat-select [value]="coverageSelected" (selectionChange)="onSelectCoverage($event)">
+                  <mat-option *ngFor="let location of coverage" [value]="location._id">
+                    <small>{{ location.name }}</small>
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="set-6 col">
+            <div class="set-3">
+              <strong>
+                <small>Soluciones</small>
+              </strong>
+            </div>
+
+            <div class="set-9 table-head">
+              <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
+                [disabled]="solutionsDataSource.length == 0"
+                [class.searchDisabled]="solutionsDataSource.length === 0" />
+            </div>
+          </div>
+
+          <div class="set-6 col">
+            <div class="set-3 title">
+              <strong>
+                <small>Problemas</small>
+              </strong>
+            </div>
+
+            <div class="set-9 table-head">
+              <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Buscar temas..."
+                [disabled]="topicsDataSource.length == 0" [class.searchDisabled]="panelTopicsData.length === 0" />
+            </div>
           </div>
         </div>
-        <div class="set-3 title">
-          <p>
-            Problemas
-            <img src="../../../assets/images/alert.webp" alt="" width="20" />
-          </p>
-        </div>
-        <div class="set-3">
-          <div class="set-4 table-head">
-            <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Buscar temas..."
-              [disabled]="topicsDataSource.length == 0" [class.searchDisabled]="panelTopicsData.length === 0" />
+
+        <div class="set-12 tables">
+          <div class="set-6">
+            <table *ngIf="solutionsDataSource.length > 0; else notsolutions" mat-table matSort
+              [dataSource]="SolutionDataSource">
+              <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
+                <td mat-cell *matCellDef="let element" style="text-align:start">
+                  <button type="button" class="catbtn-2 color" (click)="redirectSolution(element._id)">
+                    <small>{{ element.title }}</small>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="score">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.score }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="users">
+                <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.users }}
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
           </div>
-        </div>
-      </div>
-      <div class="set-12 tables" style="background-color: white">
-        <div class="set-6">
-          <table *ngIf="solutionsDataSource.length > 0; else notsolutions" mat-table matSort
-            [dataSource]="SolutionDataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="title">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
-              <td mat-cell *matCellDef="let element" style="text-align:start">
-                <button type="button" class="catbtn-2 color" (click)="redirectSolution(element._id)">
-                  {{ element.title }}
-                </button>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="score">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.stats.score }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="users">
-              <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.stats.users }}
-              </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
-        </div>
-        <ng-template #notsolutions>
-          <p class="notData">Sin soluciones</p>
-        </ng-template>
-
-        <div class="set-6">
-          <table *ngIf="panelTopicsData.length > 0; else nottopic" mat-table matSort [dataSource]="TopicDataSource"
-            class="mat-elevation-z8">
-            <ng-container matColumnDef="title">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título
-              </th>
-              <td mat-cell *matCellDef="let element" style="text-align:start">
-                <button type="button" class="catbtn-2 color" (click)="redirect(element._id)">
-                  {{ element.title }}
-                </button>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="score">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.stats.score }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="users">
-              <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.stats.users }}
-              </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
-          <ng-template #nottopic>
-            <p class="notData">Sin problemas</p>
+          <ng-template #notsolutions>
+            <p class="notData">Sin soluciones</p>
           </ng-template>
+
+          <div class="set-6">
+            <table *ngIf="panelTopicsData.length > 0; else nottopic" mat-table matSort [dataSource]="TopicDataSource"
+              class="mat-elevation-z8">
+              <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Ordenar por título">Título
+                </th>
+                <td mat-cell *matCellDef="let element" style="text-align:start">
+                  <button type="button" class="catbtn-2 color" (click)="redirect(element._id)">
+                    <small>{{ element.title }}</small>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="score">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.score }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="users">
+                <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.users }}
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+            <ng-template #nottopic>
+              <p class="notData">Sin problemas</p>
+            </ng-template>
+          </div>
         </div>
-      </div>
+      </mat-card>
     </div>
   </div>
 </div>
