--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -5,30 +5,48 @@
   width: 100%;
   height: auto;
 
+  .col-rgt {
+    mat-card {
+      padding: 0 !important;
+    }
+  }
+
   .container-titles {
-    padding-top: 20px;
+    padding: 0 20px;
     background-color: white;
 
-    .title {
-      // display: flex;
+    .col {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      ;
 
-      // align-items: flex-start;
-      p {
-        margin-left: 18%;
-        font-size: 16px;
-        font-weight: 700;
-        margin-top: 10px;
+      >div,
+      * {
+        margin: 0;
       }
 
-      img {
-        position: absolute;
-        margin-left: 5px;
+      .set-9 {
+        padding-left: 20px;
       }
+    }
+
+    .col:nth-child(odd) {
+      padding-left: 20px;
+    }
+
+    .col:nth-child(even) {
+      padding-right: 20px;
     }
   }
 
   .tables {
-    padding-top: 10px;
+    display: flex;
+
+    .set-6 {
+      background: #ffffff;
+      flex: 1;
+    }
 
     .title {
       font-weight: 500;
@@ -106,8 +124,8 @@
   table {
     width: 100%;
     box-shadow: none !important;
-    padding: 0px 10px;
-    padding-bottom: 50px;
+    padding: 0 20px;
+    padding-bottom: 20px;
   }
 
   .loading {
@@ -125,12 +143,7 @@
   }
 
   .catbtn-2 {
-    // background-color: #71f5ad; 
-    // color: #00031d;
-    padding: 5px 20px;
-    // border: 3px solid #71f5ad;
     text-align: start;
-
     font-size: 15px;
     font-weight: 600;
     border-radius: 4px;
@@ -140,50 +153,57 @@
     color: #696969;
   }
 
-}
+  .table-head {
+    display: flex;
+    align-items: center;
 
-.table-head {
-  display: flex;
-  align-items: center;
+    * {
+      margin: 0;
+    }
 
-  * {
-    margin: 0;
+    p.title {
+      margin-right: 70px;
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding-bottom: 0 !important;
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 15px;
+      box-shadow: inset 0 0 0 1px rgba($color: #000000, $alpha: 0.1);
+      border-radius: 5px;
+      flex: 1;
+    }
+
+    input[type="text"]:focus {
+      box-shadow: inset 0 0 0 2px #00031d;
+    }
+
+    input[type="text"]:disabled {
+      cursor: not-allowed;
+      opacity: 0.7;
+    }
   }
 
-  p.title {
-    margin-right: 70px;
+  .notData {
+    width: 100%;
+    height: 130px;
+    line-height: 130px;
+    text-align: center;
   }
 
-  ::ng-deep .mat-form-field-wrapper {
-    padding-bottom: 0 !important;
+  .searchDisabled {
+    opacity: 0 !important;
   }
 
-  input[type="text"] {
-    padding: 15px;
-    // border: 1px solid rgba($color: #000000, $alpha: 0.1);
-    box-shadow: inset 0 0 0 1px rgba($color: #000000, $alpha: 0.1);
-    border-radius: 5px;
-    // width: 40%;
-    flex: 1;
+  ::ng-deep th.mat-header-cell:first-of-type,
+  td.mat-cell:first-of-type,
+  td.mat-footer-cell:first-of-type,
+  ::ng-deep th.mat-header-cell:last-of-type,
+  td.mat-cell:last-of-type,
+  td.mat-footer-cell:last-of-type {
+    padding: 0 !important;
   }
-
-  input[type="text"]:focus {
-    box-shadow: inset 0 0 0 2px #00031d;
-  }
-
-  input[type="text"]:disabled {
-    cursor: not-allowed;
-    opacity: 0.7;
-  }
-}
-
-.notData {
-  width: 100%;
-  height: 130px;
-  line-height: 130px;
-  text-align: center;
-}
-
-.searchDisabled {
-  opacity: 0 !important;
 }
